prevented the flicker

--- a/src/general/components/BannerImage.css
+++ b/src/general/components/BannerImage.css
@@ -71,8 +71,11 @@
   }
   .logo {
     width: 44%;
-    height: auto;
+    height: 100px;
     display: inline-block;
+    background-size: contain;
+    background-position: bottom left;
+    background-repeat: no-repeat;
   }
   .title {
     width: 100%;
